--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <div class="conteiner">
-            <h2>NETFLIX</h2>
+        <div class="container">
+            <h2 class="logo">NETFLIX</h2>
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Séries</a>
