--- a/Index.html
+++ b/Index.html
@@ -18,5 +18,21 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">Peaky Blinders: Sangue, Apostas e Navalhas</h3>
+                <p class="descricao">Thomas Shelby e seus irmãos retornam a Birmingham depois de servir no exército britânico durante a Primeira Guerra Mundial. Os Peaky Blinders, a gangue na qual Thomas é líder, controlam a cidade de Birmingham. Mas, como as ambições de Shelby se estendem para além de Birmingham, ele planeja construir o império de negócios que criou e impedir qualquer um que atrapalhar.</p>                                
+            </div>
+            <div class="botoes">
+                <button role="button" class="botao">
+                    ASSISTIR AGORA
+                </button>
+                <button role="button" class="botao">
+                    MAIS INFORMAÇÕES
+                </button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
