--- a/Index.html
+++ b/Index.html
@@ -25,14 +25,17 @@
                 <p class="descricao">Thomas Shelby e seus irmãos retornam a Birmingham depois de servir no exército britânico durante a Primeira Guerra Mundial. Os Peaky Blinders, a gangue na qual Thomas é líder, controlam a cidade de Birmingham. Mas, como as ambições de Shelby se estendem para além de Birmingham, ele planeja construir o império de negócios que criou e impedir qualquer um que atrapalhar.</p>                                
             </div>
             <div class="botoes">
+                <i class="fas fa-play"></i>
                 <button role="button" class="botao">
                     ASSISTIR AGORA
                 </button>
                 <button role="button" class="botao">
+                    <i class="fas fa-info-circle"></i>
                     MAIS INFORMAÇÕES
                 </button>
             </div>
         </div>
     </main>
+    <script src="https://kit.fontawesome.com/df9f76d016.js" crossorigin="anonymous"></script>
 </body>
 </html>
