--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/main.css">
+
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+        
     <title>NETFLIX CLONE</title>
 </head>
-<body>
+<body>    
     <header>
         <div class="container">
             <h2 class="logo">NETFLIX</h2>
@@ -24,9 +29,9 @@
                 <h3 class="titulo">Peaky Blinders: Sangue, Apostas e Navalhas</h3>
                 <p class="descricao">Thomas Shelby e seus irmãos retornam a Birmingham depois de servir no exército britânico durante a Primeira Guerra Mundial. Os Peaky Blinders, a gangue na qual Thomas é líder, controlam a cidade de Birmingham. Mas, como as ambições de Shelby se estendem para além de Birmingham, ele planeja construir o império de negócios que criou e impedir qualquer um que atrapalhar.</p>                                
             </div>
-            <div class="botoes">
-                <i class="fas fa-play"></i>
+            <div class="botoes">                
                 <button role="button" class="botao">
+                    <i class="fas fa-play"></i>
                     ASSISTIR AGORA
                 </button>
                 <button role="button" class="botao">
@@ -36,6 +41,44 @@
             </div>
         </div>
     </main>
-    <script src="https://kit.fontawesome.com/df9f76d016.js" crossorigin="anonymous"></script>
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/mini1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini4.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini5.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini6.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini7.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini8.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini9.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini10.jpg" alt="">
+            </div>            
+        </div>
+    
+    </div>    
+    <script src="https://kit.fontawesome.com/df9f76d016.js" crossorigin="anonymous"></script>    
+    <script src="js/owl/jquery.min.js"></script>      
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 </body>
 </html>
