--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/main.css">
 
+    <!--responsividade-->
+
+    <link rel="stylesheet" href="style/responsive.css">
+
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
@@ -26,7 +30,7 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">Peaky Blinders: Sangue, Apostas e Navalhas</h3>
+                <h3 class="titulo">Peaky Blinders</h3>
                 <p class="descricao">Thomas Shelby e seus irmãos retornam a Birmingham depois de servir no exército britânico durante a Primeira Guerra Mundial. Os Peaky Blinders, a gangue na qual Thomas é líder, controlam a cidade de Birmingham. Mas, como as ambições de Shelby se estendem para além de Birmingham, ele planeja construir o império de negócios que criou e impedir qualquer um que atrapalhar.</p>                                
             </div>
             <div class="botoes">                
