--- a/Index.html
+++ b/Index.html
@@ -77,8 +77,41 @@
             <div class="item">
                 <img class="box-filme" src="img/mini10.jpg" alt="">
             </div>            
+        </div>    
+    </div>
+    <div class="carrosel-filmes2">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/mini11.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini12.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini13.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini14.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini15.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini16.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini17.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini18.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini19.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini20.jpg" alt="">
+            </div>
         </div>
-    
     </div>    
     <script src="https://kit.fontawesome.com/df9f76d016.js" crossorigin="anonymous"></script>    
     <script src="js/owl/jquery.min.js"></script>      
